# sqlx-seeder

./: .gitignore  Cargo.toml  README.md
example/: Cargo.toml
example/migration/: test_c.rs
example/migrations/: 20210101000001_users.sql  20210101000002_todos.sql
example/seeds/: 20210101000001_users.sql  20210101000002_todos.sql
example/src/: main.rs
example/test_hello/: Cargo.toml
example/test_hello/migration/: test_a.rs  test_b.rs
example/test_hello/src/: main.rs
sqlx-seeder-cli/: Cargo.toml
sqlx-seeder-cli/src/: seeder.rs  seeding.rs
src/: lib.rs
