[package]
name = "test_hello"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-seeder = { version = "0.1.0", path = "../../sqlx-seeder", default-features = false }
sqlx = {version = "0.5.5", features = ["runtime-tokio-native-tls", "uuid", "mysql", "chrono"]}
sqlx-core = { version = "0.5.5", default-features=false, features = ["mysql", "uuid", "bigdecimal", "chrono"] }